fix. goBtn z-index

--- a/css/common.scss
+++ b/css/common.scss
@@ -728,7 +728,7 @@ section {
       line-height: 60px;
       text-decoration: none;
       color: #fff;
-      z-index: 100;
+      z-index: 10;
       transition-duration: 0.3s;
     }
 
